cfn/asg.cnf.yml
Parameters:
  VPCId:
    Description: Name of the stack containing a VPC with at least two subnets
    Type: AWS::EC2::VPC::Id
  VPCZoneIdentifier:
    Description: Name of the stack containing a VPC with at least two subnets
    Type: CommaDelimitedList
  DesiredCapacity:
    Type: Number
    Default: 1
    Description: Number of instances to launch in your ECS cluster.
  MaxSize:
    Type: Number
    Default: 1
    Description: Maximum number of instances that can be launched in your ECS cluster.
Resources:
  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    # DependsOn: ECSCluster
    Properties:
      VPCZoneIdentifier:
        Ref: VPCZoneIdentifier
        # - Fn::ImportValue:
        #     Fn::Sub:
        #       "${NetworkStackName}-PublicSubnetAz1"
      LaunchConfigurationName:
        Ref: LaunchConfiguration
      MinSize: '1'
      MaxSize:
        Ref: 'MaxSize'
      DesiredCapacity:
        Ref: 'DesiredCapacity'
    CreationPolicy:
      ResourceSignal:
        Timeout: PT60M
    UpdatePolicy:
      AutoScalingReplacingUpdate:
        WillReplace: 'true'
        PauseTime: PT60M
  LaunchConfiguration:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      # AssociatePublicIpAddress: true #not needed if subnet allocates
      ImageId:
        Fn::FindInMap: [AWSRegionToAMI, Ref: 'AWS::Region', AMIID]
      SecurityGroups:
        - Ref: PublicSecurityGroup
      InstanceType:
        Ref: InstanceType
      IamInstanceProfile:
        Ref: EC2InstanceProfile
      KeyName: ecs-instance
      UserData:
        Fn::Base64:
          Fn::Sub: (( file "includes/instance-user-data.sh" ))
  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - Ref: ECSInstanceRole
  PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ECS Public Security Group
      VpcId:
        Ref: VPCId
  PublicSecurityGroupDynamicPorts:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId:
        Ref: PublicSecurityGroup
      IpProtocol: tcp
      FromPort: 31000
      ToPort: 61000
      SourceSecurityGroupId:
        Ref: PublicSecurityGroup
  PublicSecurityGroupHTTPInbound:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId:
        Ref: PublicSecurityGroup
      IpProtocol: tcp
      FromPort: '80'
      ToPort: '80'
      CidrIp: 0.0.0.0/0
  PublicSecurityGroupHTTPSInbound:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId:
        Ref: PublicSecurityGroup
      IpProtocol: tcp
      FromPort: '443'
      ToPort: '443'
      CidrIp: 0.0.0.0/0
  PublicSecurityGroupSSHInbound:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId:
        Ref: PublicSecurityGroup
      IpProtocol: tcp
      FromPort: '22'
      ToPort: '22'
      CidrIp: 0.0.0.0/0
  ECSInstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: [ec2.amazonaws.com]
          Action: ['sts:AssumeRole']
      Path: /
      Policies:
      - PolicyName: ecs-service-instance
        PolicyDocument:
          Statement:
          - Effect: Allow
            Resource: '*'
            Action: [ 'ecs:CreateCluster',
                      'ecs:DeregisterContainerInstance',
                      'ecs:DiscoverPollEndpoint',
                      'ecs:Poll',
                      'ecs:RegisterContainerInstance',
                      'ecs:StartTelemetrySession',
                      'ecs:Submit*',
                      'ecr:BatchCheckLayerAvailability',
                      'ecr:BatchGetImage',
                      'ecr:GetDownloadUrlForLayer',
                      'ecr:GetAuthorizationToken',
                      'logs:CreateLogStream',
                      'logs:PutLogEvents']
  AutoscalingRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: [application-autoscaling.amazonaws.com]
          Action: ['sts:AssumeRole']
      Path: /
      Policies:
      - PolicyName: ecs-service-autoscaling
        PolicyDocument:
          Statement:
          - Effect: Allow
            Resource: '*'
            Action: [
              'application-autoscaling:*',
              'cloudwatch:DescribeAlarms',
              'cloudwatch:PutMetricAlarm',
              'ecs:DescribeServices',
              'ecs:UpdateService'
            ]
